--- a/06_practice/views/edit.ejs
+++ b/06_practice/views/edit.ejs
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="/stylesheets/index.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    
+    <div class="main">
+        <div class="form">
+            <form action="/edit" method="post">
+                <input class="title" type="text" name="title" placeholder="Title goes here" required spellcheck="false" value="<%= file.replaceAll('-', ' ').slice(0, -4) %>" readonly  >
+                <textarea rows="1" name="newTitle" placeholder="Enter a new Title" spellcheck="false"></textarea>
+                <input class="submit" type="submit" value="Done">
+            </form>
+        </div>
+    </div>
 </body>
+
 </html>
